# qpspin-mc-solver

./: .gitignore  .pre-commit-config.yaml  README.md  asv.conf.json  pyproject.toml
.github/workflows/: test.yml
benchmarks/: basic_benchmark.py  benchmark_two_level_system.py
examples/: benchmark_pi.py  two_level_system.ipynb
rust/: Cargo.toml
rust/src/: lib.rs  pi.rs  two_level_system.rs
src/: lib.rs  two_level_system.rs
src/qpspin_mc/: __init__.py  _qpspin_mc.pyi  pi.py  two_level_system.py
src/qpspin_mc/_qpspin_mc/: two_level_system.pyi
tests/: test__qpspin_mc.py  test_pi.py  test_two_level_system.py
