[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "qpspin-mc-solver"
description = "Continuous time MC solver for Quantum p-spin models"
dynamic = ["version"] # version is set in rust/Cargo.toml
authors = [{ name = "Davide Facoetti" }]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy>=2.2.3", "pydantic>=2.10.6"]

[dependency-groups]
dev = [
    "asv>=0.6.4",
    "maturin>=1.8.2",
    "mypy>=1.15.0",
    "nb-clean>=3.2.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
notebook = ["ipykernel>=6.29.5", "matplotlib>=3.10.0", "pandas>=2.2.3"]

[tool.maturin]
python-packages = ["qpspin_mc"]
# features = ["pyo3/extension-module"]
manifest-path = "rust/Cargo.toml"
module-name = "qpspin_mc._qpspin_mc"

[tool.uv]
default-groups = ["dev", "notebook"]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "E",
    "F",
    "FA",
    "FBT",
    "FURB",
    "I",
    "ICN",
    # "INP",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PL",
    "PD",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "N818",
    "PLC0414", # Allow redundant alias to re-export pyo3-generated symbols to the public interface
    "RET505",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004", # allow "magic numbers" in tests
]
