[package]
name = "_qpspin_mc"
version = "0.1.0"
edition = "2024"

[lib]
name = "_qpspin_mc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
# pyo3 = { version = "0.23.3", features = ["extension-module"] }
rand = "0.9.0"
rand_pcg = "0.9.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
